minor fix very large vertical padding on tsdb items on mobile, moved margin to tsdb-list

--- a/source/assets/stylesheets/modules/_tsdb-list.css.sass
+++ b/source/assets/stylesheets/modules/_tsdb-list.css.sass
@@ -1,5 +1,8 @@
+.tsdb-list
+  margin: 1.5rem 0
+
 .tsdb
-  margin: 2.5rem 0.5rem
+  margin: 0.7rem 0.5rem
   padding: 0.5rem
   display: inline-block
   //background-color: $secondary-color
@@ -28,7 +31,7 @@
     a:hover
       transition: 300ms
       color: darken($secondary-color, 10%)
-        
+
 
 @media #{$medium-up}
   .tsdb h2
